# ezlang

./: Cargo.toml
examples/: basic.ez  function_call.ez  keywords.ez  label.ez  main.ez  number.ez  operaciones.ez  square.ez  strings.ez
src/: compiler.rs  ezlang.rs  lexer.rs  main.rs  parser.rs
